--- a/styles.css
+++ b/styles.css
@@ -1,38 +1,153 @@
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
 body {
-  background-color: #F4EFD6;
-  font-family: 'Roboto Condensed', sans-serif;
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
 }
 
+*,
+*:after,
+*:before {
+  box-sizing: border-box;
+}
+
+
+
+/* balises génériques */
+body {
+  background-color: #F4EFD6;
+  font-family: 'Kameron', sans-serif;
+}
+
+body:before {
+  border: 1px solid #343432;
+  content: '';
+  display: block;
+  height: 97vh;
+  margin: 10px;
+  pointer-events: none;
+  position: fixed;
+  width: calc(100% - 20px);
+}
+
+a {
+  text-decoration: none;
+  color :#36827F;
+ }
+ 
+ a:hover {
+   font-style: italic;
+   color: #9D96B8;
+ }
+ 
+
+/* structure */
+main {
+  position: relative;
+}
+
+main,
+.wrapper {
+  height: 100%;
+  min-height: 100vh;
+}
+
+.wrapper {
+  align-items: center;
+  display: flex;
+  gap: 5rem;
+}
+
+
+  /*bouton*/
 .button {
   display: flex;
   flex-direction: column;
-  float : right;
-  font-size: 160px;
-  justify-content: center;
-  margin-right: 25%;
-  margin-top: 10%;
-  
+  font-size: 12vw;
+  width: calc(50% - 2.5rem);
+  /* margin-right: 80vw; */
+  /* margin-top: 10%; */
 }
+
 
 .who {
-  float : left;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
   font-size: 30px;
-  margin-left: 25%;
-  margin-top: 10%;
+  padding : 10px;
+  width: calc(50% - 2.5rem);
 }
 
-.who h4 {
+.who h3 {
+  font-weight: 500;
+  margin-bottom: 10px;
+}
+
+.who p {
   font-weight: 400;
+  font-size: 25px;
+  font-style: italic;
+  border-width: 1em;
+  text-align :center;
 }
 
-.who h6 {
-  font-weight: 300;
-}
+
 
 .social-media {
-  float: left;
+  display: flex;
+  font-size: 13px;
   font-style: italic;
-  text-align : left;
+  margin-left: 1vw;
+  margin-top: 2vh;
+  position: absolute;
+  top: 0;
   text-orientation: upright;
   writing-mode: vertical-rl;
+}
+
+.linkdin {
+  margin-top: 15%;
 }
